# Yandex-Praktikum-URL-Shortener

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  pytest.ini
migrations/: env.py
migrations/versions/: 3de7663b44b3_01_init_db.py  3ed05608e378_03_changed_pk.py  3f998712e23c_02_added_url_fields.py  79c401c10044_05_added_cascade_delete.py  f5faae5208ff_04_visit_table.py
src/: main.py
src/api/v1/: base.py
src/api/v1/endpoints/: health_check.py  url.py
src/core/: config.py
src/crud/: base.py  url.py  visit.py
src/db/: base.py  base_class.py  db.py
src/middleware/: blacklist.py
src/models/: __init__.py  mixins.py  url.py  visit.py
src/schemas/: url.py  visit.py
src/services/: health_check.py  url.py
src/tests/: conftest.py  test_api.py
