[tool.poetry]
name = "async-python-sprint-4"
version = "0.1.0"
description = ""
authors = ["methodDen <daniyarabsatov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
uvloop = "^0.17.0"
orjson = "^3.9.7"
pytest = "^7.4.2"
sqlalchemy = "^2.0.21"
sqlalchemy-utils = "^0.41.1"
asyncpg = "^0.28.0"
psycopg2-binary = "^2.9.7"
alembic = "^1.12.0"
python-dotenv = "^1.0.0"
pydantic-settings = "^2.0.3"
pytest-asyncio = "^0.21.1"
httpx = "^0.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
